p2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
  labels:
    app: app-one
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: ClusterIP
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
